<resources>

    <string name="app_name">Huawei To-Do</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="todo_lists_title">To-Do Lists</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remindmeText">Remind me later</string>
    <string name="huaweitoddo">Huawei To-Do</string>
    <string name="email">Email</string>
    <string name="no_todo_lists">No To-Do List</string>
    <string name="no_todo_item">No To-Do Item</string>
    <string name="settings">Settings</string>
    <string name="menu_order_by">Order</string>
    <string name="createdate">Create Date</string>
    <string name="deadline">Deadline</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="menu_filter_by">Filter</string>
    <string name="expired">Expired</string>
    <string name="register_uppercase">REGISTER</string>
    <string name="login_uppercase">LOGIN</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcomeback">Welcome back!</string>
    <string name="loginwithyouremail">Login with your email</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="surname">Surname</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="todo_list_inner_title">ToDo List</string>
    <string name="created_at">Created at&#160;</string>
    <string name="copyright">© 2019 twenk11k</string>
    <string name="logout">Logout</string>
    <string name="deadlineText">Deadline:&#160;</string>
    <string name="logged_out">Logged out from your account.</string>
    <string name="error_name">You need to enter a name</string>
    <string name="error_description">You need to enter a description</string>
    <string name="error_deadline">You need to set a deadline</string>
    <string name="email_subject">My To-Do List:</string>
    <string name="email_text">Here is my to-do list which is attached to this email.</string>
    <string name="email_title">Send Email</string>
    <string name="error_password">You need to enter a password</string>
    <string name="error_email">You need to enter an email</string>
    <string name="error_occurred">An error occurred</string>
    <string name="error_occurred_try_again">An error occurred. Please try again.</string>

    <string name="error_surname">You need to enter a surname</string>
    <string name="error_correct_email">You need to enter correct email address</string>
    <string name="email_not_available">This email address is not available</string>
    <string name="error_permission">Cannot save list to storage because permission is not granted</string>
    <string name="error_permission_permanent">Cannot save list to storage because permission is not granted permanently. Reinstall the app to prevent this issue.</string>
    <string name="success_export_todo_list">Todo List successfully saved to the local storage</string>
    <string name="title_dialog_create_todo_item">Create a To-Do</string>
    <string name="title_dialog_create_todo_list">Create a To-Do List</string>
    <string name="welcome_title">Welcome to Huawei TO-DO</string>
    <string name="welcome_hint">Login or Register to get started</string>
    <string name="dialog_save_list_to_storage">Save this list to local storage</string>
    <string name="dialog_send_list_via_email">Send this list via email</string>
    <string name="dialog_delete_todo_list_question">Are you sure you want to delete this list?</string>
    <string name="dialog_delete_todo_item_question">Are you sure you want to delete this item?</string>

    <string name="error_empty_list">Cannot export list because list is empty</string>

</resources>
