<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/huaweiLogo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/huawei_logo"

                />

            <TextView
                android:id="@+id/huaweiText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/huaweitoddo"
                android:textColor="@color/colorWhite"
                android:textSize="23sp"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorCardViewDark"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_title"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_hint"
                android:textColor="@color/colorLightGray"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/login_uppercase"
                android:textColor="@color/colorWhite" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:background="@color/color_divider" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/register_uppercase"
                android:textColor="@color/colorWhite"

                />

        </LinearLayout>
    </RelativeLayout>
</layout>