<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <import type="android.view.View"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDialogBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:gravity="center_vertical|center"
                android:text="@string/title_dialog_create_todo_list"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColorHint="@color/colorLightGray"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/create"
                android:layout_gravity="end"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnCreateList"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>