<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <import type="android.view.View"/>
    </data>
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/background">
        <com.twenk11k.todolists.common.StatusBarView
            android:id="@+id/statusBarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/statusBarCustom"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
        </androidx.appcompat.widget.Toolbar>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorCoverArea"
                android:layout_below="@id/toolbar"
                >


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/login_title"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/colorLoginButton"
                    android:textColor="@color/colorWhite"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linear"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/welcomeback"
                    android:textSize="17sp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_20sdp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginwithyouremail"
                    android:textColor="@color/colorLightGray"
                    android:textSize="11sp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/colorGray"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/emailEditText"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/colorGray"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGray"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPassword"
                        android:id="@+id/passwordEditText"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            </RelativeLayout>

    </RelativeLayout>
</layout>